Update API URLs for production

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1134,7 +1134,7 @@
     </main>
 
     <script>
-        const API_BASE = 'http://localhost:5109';
+        const API_BASE = 'https://f1-api-x7di.onrender.com';
         const OPENF1_BASE = 'https://api.openf1.org/v1';
         
         let currentSessionKey = null;
