Fix all localhost URLs for production

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1508,7 +1508,7 @@
                     <div class="results-card">
                         <div class="error">
                             Failed to get prediction. ${error.message}<br>
-                            <small style="opacity: 0.7;">Make sure the ML service is running at http://localhost:8000</small>
+                            <small style="opacity: 0.7;">The prediction service may be temporarily unavailable. Please try again.</small>
                         </div>
                     </div>
                 `;
