--- a/frontend/index.html
+++ b/frontend/index.html
@@ -39,6 +39,50 @@
             color: var(--text-primary);
         }
 
+        /* Cold Start Banner */
+        .cold-start-banner {
+            background: linear-gradient(90deg, #ff9500 0%, #ff7b00 100%);
+            color: #1a1a1a;
+            padding: 10px 20px;
+            text-align: center;
+            font-size: 0.9rem;
+            font-weight: 600;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 10px;
+            position: relative;
+        }
+
+        .cold-start-banner.hidden {
+            display: none;
+        }
+
+        .cold-start-banner .banner-text {
+            flex: 1;
+        }
+
+        .cold-start-banner .banner-close {
+            background: rgba(0, 0, 0, 0.2);
+            border: none;
+            color: #1a1a1a;
+            width: 24px;
+            height: 24px;
+            border-radius: 50%;
+            cursor: pointer;
+            font-size: 1rem;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            transition: all 0.2s ease;
+            position: absolute;
+            right: 16px;
+        }
+
+        .cold-start-banner .banner-close:hover {
+            background: rgba(0, 0, 0, 0.3);
+        }
+
         .app-container {
             max-width: 1280px;
             margin: 0 auto;
@@ -1007,6 +1051,12 @@
     </style>
 </head>
 <body>
+    <!-- Cold Start Warning Banner -->
+    <div class="cold-start-banner" id="coldStartBanner">
+        <span class="banner-text">⚠️ First load may take 30-50 seconds while servers wake up. Please be patient!</span>
+        <button class="banner-close" onclick="dismissBanner()" title="Dismiss">×</button>
+    </div>
+
     <header>
         <div class="app-container">
             <h1 class="logo">F1 Lap Analyzer</h1>
@@ -1143,6 +1193,45 @@
         let currentDrivers = [];
         let meetingsCache = {};
         let sessionsCache = {};
+        let hasLoadedSuccessfully = localStorage.getItem('f1_api_loaded') === 'true';
+
+        // Cold Start Banner Management
+        function initBanner() {
+            const banner = document.getElementById('coldStartBanner');
+            const dismissed = localStorage.getItem('f1_banner_dismissed');
+            if (dismissed === 'true' || hasLoadedSuccessfully) {
+                banner.classList.add('hidden');
+            }
+        }
+
+        function dismissBanner() {
+            const banner = document.getElementById('coldStartBanner');
+            banner.classList.add('hidden');
+            localStorage.setItem('f1_banner_dismissed', 'true');
+        }
+
+        function markApiLoaded() {
+            hasLoadedSuccessfully = true;
+            localStorage.setItem('f1_api_loaded', 'true');
+            dismissBanner();
+        }
+
+        function getLoadingMessage() {
+            if (hasLoadedSuccessfully) {
+                return 'Loading session data';
+            }
+            return 'Waking up servers... This may take up to 50 seconds on first load';
+        }
+
+        function getPredictionLoadingMessage() {
+            if (hasLoadedSuccessfully) {
+                return 'Analyzing tire degradation';
+            }
+            return 'Waking up ML service... This may take up to 50 seconds on first load';
+        }
+
+        // Initialize banner on page load
+        initBanner();
 
         // Tab Navigation
         function switchTab(tabId) {
@@ -1341,7 +1430,7 @@
             const analyzeBtn = document.getElementById('analyzeBtn');
 
             analyzeBtn.disabled = true;
-            resultsDiv.innerHTML = '<div class="loading">Loading session data</div>';
+            resultsDiv.innerHTML = `<div class="loading">${getLoadingMessage()}</div>`;
 
             try {
                 const response = await fetch(`${API_BASE}/api/analysis/session/${currentSessionKey}/summary`);
@@ -1352,6 +1441,9 @@
 
                 const data = await response.json();
                 currentDrivers = data.drivers || [];
+                
+                // Mark API as loaded for future requests
+                markApiLoaded();
                 
                 renderResults(data);
                 populateDriverDropdown(currentDrivers);
@@ -1488,7 +1580,7 @@
             if (!driverNumber || !currentSessionKey) return;
 
             predictBtn.disabled = true;
-            resultsDiv.innerHTML = '<div class="results-card"><div class="loading">Analyzing tire degradation</div></div>';
+            resultsDiv.innerHTML = `<div class="results-card"><div class="loading">${getPredictionLoadingMessage()}</div></div>`;
 
             try {
                 const response = await fetch(
