--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1184,7 +1184,9 @@
     </main>
 
     <script>
-        const API_BASE = 'https://f1-api-x7di.onrender.com';
+        const API_BASE = window.location.hostname === 'localhost' || window.location.hostname === '127.0.0.1'
+            ? 'http://localhost:5109' 
+            : 'https://f1-api-x7di.onrender.com';
         const OPENF1_BASE = 'https://api.openf1.org/v1';
         
         let currentSessionKey = null;
